--- a/package.json
+++ b/package.json
@@ -9,5 +9,14 @@
     "webpack": "^5.102.0",
     "webpack-cli": "^6.0.1",
     "webpack-dev-server": "^5.2.2"
-  }
+  },
+  "name": "dintour",
+  "version": "1.0.0",
+  "main": "index.ts",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "author": "dinja",
+  "license": "ISC",
+  "description": ""
 }
