--- a/package.json
+++ b/package.json
@@ -3,8 +3,10 @@
     "discord.py": "^1.0.0"
   },
   "devDependencies": {
+    "@types/node": "^24.6.2",
     "dotenv": "^17.2.3",
     "ts-loader": "^9.5.4",
+    "ts-node": "^10.9.2",
     "typescript": "^5.9.3",
     "webpack": "^5.102.0",
     "webpack-cli": "^6.0.1",
