--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "type": "module",
   "dependencies": {
     "discord.js": "^14.22.1",
     "discord.py": "^1.0.0"
@@ -17,7 +18,12 @@
   "version": "1.0.0",
   "main": "index.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "node --loader ts-node/esm src/index.ts",
+    "build": "tsc",
+    "start": "node dist/index.js",
+    "prestart": "npm run build",
+    "typecheck": "tsc --noEmit",
+    "clean": "rimraf dist || rm -rf dist"
   },
   "author": "dinja",
   "license": "ISC",
